--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -31,6 +31,19 @@ body {
   width: 0;
 }
 
+@media (min-width: 576px) and (max-width: 768px) {
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+}
+@media (min-width: 300px) and (max-width: 576px) {
+  ul {
+    margin: 0;
+    padding: 0;
+  }
+}
+
 ul > li {
   list-style-type: none;
   font-size: 0.7em;
