--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -17,6 +17,7 @@ ul {
         margin: 0;
         padding: 0;
     }
+
     @include xs {
         margin: 0;
         padding: 0;
@@ -101,6 +102,16 @@ a {
     }
 }
 
+.intro-name {
+    font-size: 6em;
+    text-align: center;
+    @include xs {
+        font-size: 3em;
+    }
+    @include xs {
+        font-size: 3em;
+    }
+}
 
 // Flex mobile
 #presentation,
@@ -127,9 +138,43 @@ a {
     }
 }
 
+.cv-item-left {
+    height: 150vh;
+    @include xs {
+        height: 220vh;
+    }
+
+    @include sm {
+        height: 220vh;
+    }
+}
+
+.cv-item-right {
+    height: 130vh;
+    @include xs {
+        height: 180vh;
+    }
+
+    @include sm {
+        height: 180vh;
+    }
+}
+
 //SKILLS
+.skills-container {
+    height: 105vh;
+
+    @include xs {
+        height: 130vh;
+    }
+
+    @include sm {
+        height: 130vh;
+    }
+}
+
 .skills-card-parent {
-    background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(1,0,6,1) 100%); 
+    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(1, 0, 6, 1) 100%);
 }
 
 // CV
@@ -138,10 +183,12 @@ a {
     font-weight: 600;
     font-size: 1.3em;
 }
+
 .cv-li {
     padding: 0;
     margin-top: 0 !important;
 }
+
 .cv-li-date {
     color: rgb(122, 122, 122);
     font-size: 0.5em;
@@ -186,6 +233,7 @@ a {
     border-radius: 20px;
     box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.719);
     border: solid 1px var(--dark-police);
+
     &:hover {
         box-shadow: none;
     }
@@ -198,9 +246,11 @@ a {
 
 #contact-mail {
     font-size: 3em;
+
     @include sm {
         font-size: 1.7em;
     }
+
     @include xs {
         font-size: 1.7em;
     }
