--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -260,6 +260,62 @@ a {
   box-shadow: none;
 }
 
+.gallery {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  min-height: 100vh;
+  padding: 20px;
+  gap: 20px;
+  padding: 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+@media (min-width: 300px) and (max-width: 576px) {
+  .gallery {
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+  }
+}
+@media (min-width: 576px) and (max-width: 768px) {
+  .gallery {
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+  }
+}
+
+.gallery-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+.gallery-img img {
+  max-width: 200px;
+  max-height: 200px;
+  background-repeat: no-repeat;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (min-width: 300px) and (max-width: 576px) {
+  .gallery-img img {
+    max-width: 150px;
+    max-height: 150px;
+  }
+}
+@media (min-width: 576px) and (max-width: 768px) {
+  .gallery-img img {
+    max-width: 170px;
+    max-height: 170px;
+  }
+}
+
 .contact {
   word-break: break-all;
 }
