--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -229,6 +229,54 @@ a {
     }
 }
 
+// GALLERY
+.gallery {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;  // Permet aux éléments de passer à la ligne sur petits écrans
+    min-height: 100vh; // S'assure que le contenu est centré verticalement
+    padding: 20px; // Évite le chevauchement avec la nav
+    gap: 20px; // Espacement uniforme entre les images
+    padding: 0;
+    user-select: none;
+    @include xs {
+        flex-direction: column;
+        align-items: center;
+        padding-top: 50px;
+    }
+    
+    @include sm {
+        flex-direction: column;
+        align-items: center;
+        padding-top: 50px;
+    }
+}
+
+.gallery-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    img {
+        max-width: 200px;
+        max-height: 200px;
+        background-repeat: no-repeat;
+        object-fit: contain;
+
+        @include xs {
+            max-width: 150px;
+            max-height: 150px;
+        }
+
+        @include sm {
+            max-width: 170px;
+            max-height: 170px;
+        }
+    }
+}
+
+
 // CONTACT
 .contact {
     word-break: break-all;
