--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -234,10 +234,10 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;  // Permet aux éléments de passer à la ligne sur petits écrans
-    min-height: 100vh; // S'assure que le contenu est centré verticalement
-    padding: 20px; // Évite le chevauchement avec la nav
-    gap: 20px; // Espacement uniforme entre les images
+    flex-wrap: wrap;  
+    min-height: 100vh; 
+    padding: 20px;
+    gap: 20px;
     padding: 0;
     user-select: none;
     @include xs {
