uniformisation couleur orange

--- a/public/styles/_settings.scss
+++ b/public/styles/_settings.scss
@@ -6,7 +6,7 @@
     --dark-police-hover: rgb(97, 97, 97);
     --light-police: rgb(192, 192, 192);
     --light-police-hover: rgb(243, 243, 243);
-    --orange-text: #e47239;
+    --orange-text: orange;
 }
 
 * {
