--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -164,7 +164,7 @@ a {
 }
 
 .skills-card-parent {
-    background: radial-gradient(circle, rgba(255, 255, 255, 1) 0%, rgba(1, 0, 6, 1) 100%);
+    background: radial-gradient(circle, rgb(241, 159, 36) 0%, rgb(39, 24, 1) 100%);
 }
 
 // CV
